2006-12-30  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* fvwm/modconf.c (ModuleConfig):
	(SendConfigToModule):
	(send_xinerama_state):
	(send_desktop_names):
	(send_desktop_geometry):
	(send_image_path):
	(send_color_limit):
	(send_colorsets):
	(send_click_time):
	(send_move_threshold):
	(send_ignore_modifiers):
	(CMD_Send_ConfigInfo):
	* fvwm/functions.c (__execute_function):
	* fvwm/events.c (My_XNextEvent):
	* fvwm/module_interface.h (msg_masks_t):
	(fmodule):
	* fvwm/execcontext.c (__exc_change_context):
	(exc_create_null_context):
	* fvwm/execcontext.h:

2006-12-29  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* fvwm/menubindings.c:
	* fvwm/menubindings.h:
	* fvwm/menucmd.c:
	* fvwm/menudim.c:
	* fvwm/menudim.h:
	* fvwm/menugeometry.c:
	* fvwm/menugeometry.h:
	* fvwm/menuitem.c:
	* fvwm/menuitem.h:
	* fvwm/menuroot.h:
	* fvwm/menus.c:
	* fvwm/menus.h:
	* fvwm/move_resize.c:
	* fvwm/move_resize.h:
	* fvwm/windowlist.c:
	simplified including header files

	* fvwm/menus.c (__mloop_handle_event):
	* fvwm/menuparameters.h:
	* fvwm/menubindings.c (menu_shortcuts):
	do not call find_entry directly but return MENU_NEWITEM_FIND instead

	* fvwm/menus.c (__mloop_handle_event):
	* fvwm/menuparameters.h:
	* fvwm/menubindings.c (menu_shortcuts):
	do not call move_any_menu directly but return MENU_NEWITEM_MOVEMENU
	instead

	* fvwm/menus.h (MenuParameters):
	(MenuOptions):
	(MenuPosHints):
	(MenuRC):
	(MenuReturn):
	(MenuRepaintTransparentParameters):
	* fvwm/menuparameters.h (MenuParameters):
	(MenuOptions):
	(MenuPosHints):
	(MenuRC):
	(MenuReturn):
	(MenuRepaintTransparentParameters):
	moved to menuparameters.h

	* fvwm/menus.h (MenuRoot):
	(MenuRootDynamic):
	(MenuRootStatic):
	* fvwm/menutypes.h (MenuRoot):
	(MenuRootDynamic):
	(MenuRootStatic):
	moved to menuroot.h

	* fvwm/menus.c (menu_get_geometry):
	(menu_get_outer_geometry):
	* fvwm/menugeometry.c (menu_get_geometry):
	(menu_get_outer_geometry):
	moved to menugeometry.c

	* fvwm/menuparameters.h: