@@ -45,13 +45,14 @@ typedef struct
 	unsigned long wcontext;
 } window_context_t;
 
+struct fmodule;
 typedef struct
 {
 	/*
 	 * using a void pointer allows us to not include module_interface.h
 	 * here, although it then requires the use of typecasting
 	 */
-	void *module;
+	struct fmodule *module;
 } module_context_t;
 
 typedef struct
